--- a/nhtg15_webapp/templates/dashboard.html
+++ b/nhtg15_webapp/templates/dashboard.html
@@ -37,6 +37,12 @@
       </div>
     </section>
     <section class="row">
+      <div class="large-6 columns">
+        <label for="postcode">Postcode</label>
+        <input type="text" name="postcode" id="postcode" value="{{ current_user.location.postcode }}" />
+      </div>
+    </section>
+    <section class="row">
       <div class="large-4 columns">
           <label for="oldpassword">Old Password</label>
           <input type="password" name="oldpassword" id="oldpassword" />
@@ -129,7 +135,7 @@
       <article class="alert">
         <a href="{{ alert.long_url }}">
           <h4>{{ alert.allergen.nicename }} found in {{ alert.brand }} {{ alert.product }}.</h4>
-          <p>Alert released {{ alert.datetime.strftime('%c') }}</p>
+          <p>Alert released {{ alert.datetime.strftime('%c') }} for {{ alert.location }} area.</p>
         </a>
       </article>
       {% endfor %}
