--- a/nhtg15_webapp/templates/home.html
+++ b/nhtg15_webapp/templates/home.html
@@ -91,4 +91,13 @@
       </form>
     </div>
   </section>
+
+  <section class="row">
+    <div class="columns">
+      <h2>Terms and Conditions</h2>
+      <p>By signing up to AllergenAlert, you agree to receive email and SMS messages.</p>
+      <p>Your details will not be passed on to any other party.</p>
+      <p>AllergenAlert is a development product, and is not intended for consumer use.</p>
+    </div>
+  </section>
 {% endblock %}
